2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.Gui.csproj:
	* MonoDevelop.Projects.Gui.Completion/ListWidget.cs:
	* MonoDevelop.Projects.Gui.Completion/ICompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/ICompletionWidget.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/CodeCompletionContext.cs:
	* MonoDevelop.Projects.Gui.Completion/IParameterDataProvider.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionWindowManager.cs:
	* MonoDevelop.Projects.Gui.Completion/ParameterInformationWindowManager.cs:
	* gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.RunOptionsPanelWidget.cs:
	  Removed ICodeCompletionContext interface. Didn't make any
	  sense - use CodeCompletionContext instead.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	  Corrected failing unit test.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/ListWidget.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	  Some changes to allow code completion window unit tests.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.Gui.csproj:
	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/ListWidget.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/ICompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionDataList.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/DeclarationViewWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/IMemberCompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionWindowManager.cs: