@@ -1,5 +1,10 @@
 2009-09-12  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
+	  Resolved a fixme, since we're now using gtk+ 2.12.
+
+2009-09-12  Mike Krüger  <mkrueger@novell.com>
+
 	* Makefile.am:
 	* MonoDevelop.Projects.Gui.csproj:
 	* MonoDevelop.Projects.Gui.Completion/ListWidget.cs:
